# wattpad-archiver

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  archiver.py  fields.txt  pyproject.toml
.github/workflows/: build.yml
templates/: cover.xhtml  title.xhtml
