[tool.poetry]
name = "wattpad-archiver"
version = "0.1.0"
description = "Downloads your wattpad bookshelf to disk"
authors = ["MRtecno98 <mr.tecno98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
EbookLib = "^0.17.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
